--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,15 @@ inv_index/output/*.txt
 inv_index/*.zip
 inv_index/data/
 contest/KR/
+
+# Created by https://www.gitignore.io/api/code
+
+### Code ###
+# Visual Studio Code - https://code.visualstudio.com/
+.settings/
+.vscode/
+tsconfig.json
+jsconfig.json
+
+
+# End of https://www.gitignore.io/api/code
